--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "@types/node": "^20.10.3",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
+    "axios": "^1.6.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
+    "styled-normalize": "^8.1.0",
     "typescript": "^5.3.2",
     "web-vitals": "^2.1.0"
   },
@@ -39,5 +42,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/styled-components": "^5.1.34",
+    "classnames": "^2.5.1",
+    "react-router-dom": "^6.21.2"
   }
 }
