--- a/client/package.json
+++ b/client/package.json
@@ -59,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@types/styled-components": "^5.1.34",
     "classnames": "^2.5.1",
     "react-app-rewired": "^2.2.1",
