--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-multi-clamp": "^2.0.6",
     "react-redux": "^9.1.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
