--- a/client/package.json
+++ b/client/package.json
@@ -35,7 +35,12 @@
     "typescript": "^5.3.2",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.0",
-    "yup": "^1.4.0"
+    "yup": "^1.4.0",
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@types/styled-components": "^5.1.34",
+    "classnames": "^2.5.1",
+    "react-app-rewired": "^2.2.1",
+    "react-router-dom": "^6.21.2"
   },
   "scripts": {
     "start": "react-app-rewired start",
@@ -58,12 +63,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/styled-components": "^5.1.34",
-    "classnames": "^2.5.1",
-    "react-app-rewired": "^2.2.1",
-    "react-router-dom": "^6.21.2"
   }
 }
