--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   strapi:
     container_name: strapi
-    image: strapi:latest
+    image: strapi:test
     restart: unless-stopped
     environment:
       DATABASE_CLIENT: postgres
