--- a/client/package.json
+++ b/client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@reduxjs/toolkit": "^2.2.2",
     "@strapi/blocks-react-renderer": "^1.0.1",
     "@tanstack/react-query": "^5.28.8",
@@ -13,18 +14,23 @@
     "@types/node": "^20.10.3",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
+    "@types/styled-components": "^5.1.34",
     "@types/uuid": "^9.0.8",
     "axios": "^1.6.8",
     "babel-plugin-transform-typescript-metadata": "^0.3.2",
+    "classnames": "^2.5.1",
     "customize-cra": "^1.0.0",
     "date-fns": "^3.6.0",
     "nuka-carousel": "^7.0.0",
     "react": "^18.3.1",
+    "react-app-rewired": "^2.2.1",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-multi-clamp": "^2.0.6",
     "react-redux": "^9.1.0",
     "react-responsive-carousel": "^3.2.23",
+    "react-router-dom": "^6.21.2",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
@@ -35,12 +41,7 @@
     "typescript": "^5.3.2",
     "uuid": "^9.0.1",
     "web-vitals": "^2.1.0",
-    "yup": "^1.4.0",
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@types/styled-components": "^5.1.34",
-    "classnames": "^2.5.1",
-    "react-app-rewired": "^2.2.1",
-    "react-router-dom": "^6.21.2"
+    "yup": "^1.4.0"
   },
   "scripts": {
     "start": "react-app-rewired start",
